Move to/from JSON utils into enum, remove all username/password usage.
Co-authored-by: sadministrator <marcothewebdev@gmail.com>